style fixes to prevent gap at the bottom of the app as well as fix exsiting issues with dropdown

--- a/src/styles/action-sidebar.scss
+++ b/src/styles/action-sidebar.scss
@@ -7,8 +7,7 @@
   flex: 1 1 auto;
   max-width: 300px;
 
-  .extended-fab,
-  .container {
+  .extended-fab {
 	margin-left: 10px;
 	margin-top: 20px;
   }
